feat: splash screen

--- a/app.json
+++ b/app.json
@@ -1,13 +1,17 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
+    "name": "Bookrise",
+    "slug": "bookrise",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "bookrise",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "backgroundColor": "#0BB589",
+      "resizeMode": "contain"
+    },
     "ios": {
       "supportsTablet": true
     },
